# common

./: CMakeLists.txt
include/: log.h
src/: log.cpp
test/: main.cpp
